--- a/.github/workflows/robot.yml
+++ b/.github/workflows/robot.yml
@@ -67,7 +67,7 @@ jobs:
         browser: [firefox, chrome]
     container:
       image: joaoeg/docker-robot-framework:0.1
-      options: -u root
+      options: -u 1001
       env:
         BROWSER: ${{ matrix.browser }}
         ROBOT_TESTS_DIR: ./automation/robot/storybook/core
