--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -15,6 +15,8 @@ jobs:
   CleanupDeployment:
     name: Cleanup Deployment
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - name: Checkout
