chore: update deps, tests setup, components cleanup

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,7 @@
+@hv:registry=https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/uikit-npm-release-orl/
+
 # Make storybook happy with its deps
 shamefully-hoist=true
 auto-install-peers=true
 prefer-workspace-packages=true
+strict-peer-dependencies=false
