--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
   },
   "ignorePatterns": ["dist", "node_modules", "config"],
   "rules": {
-    "react/jsx-filename-extension": "off"
+    "react/jsx-filename-extension": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
