--- a/package.json
+++ b/package.json
@@ -12,52 +12,51 @@
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
   },
   "scripts": {
+    "prebuild": "npx rimraf ./**/dist",
     "dev": "pnpm --parallel -F=!'./tools/**' dev",
-    "doc": "start-storybook -p 6006 --no-manager-cache",
+    "doc": "storybook dev -p 6006 --no-manager-cache",
     "build": "pnpm -r build",
-    "build:storybook": "build-storybook",
-    "format:check": "prettier -c .",
-    "format:fix": "prettier -w .",
-    "type:check": "tsc --noEmit",
-    "lint": "eslint . --cache",
+    "build:storybook": "storybook build",
+    "lint": "npx npm-run-all --parallel lint:*",
+    "lint:eslint": "eslint . --cache",
+    "lint:prettier": "prettier -c .",
     "lint-staged": "lint-staged",
+    "type:check": "tsc --noEmit",
+    "test": "pnpm --parallel -F=!'./tools/**' test",
+    "test:e2e": "npx playwright test --config=config/playwright.config.ts",
     "clean": "npx rimraf ./**/node_modules ./**/dist",
-    "prepare": "husky install"
+    "prepare": "npx husky install",
+    "prettier": "npx prettier -w ."
   },
   "engines": {
     "node": ">=16.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/builder-vite": "^0.2.2",
-    "@storybook/core-common": "^6.5.10",
-    "@storybook/node-logger": "^6.5.10",
-    "@storybook/react": "^6.5.10",
+    "@playwright/test": "^1.27.1",
+    "@storybook/addon-a11y": "^7.0.0-alpha.41",
+    "@storybook/addon-essentials": "^7.0.0-alpha.41",
+    "@storybook/addon-links": "^7.0.0-alpha.41",
+    "@storybook/react": "^7.0.0-alpha.41",
+    "@storybook/react-vite": "^7.0.0-alpha.41",
     "@testing-library/jest-dom": "^5.16.5",
-    "@types/jest": "^29.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "babel-loader": "^8.2.5",
-    "eslint": "^8.23.1",
+    "@testing-library/react": "^13.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "eslint": "^8.25.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "husky": "^8.0.1",
-    "jest": "^29.0.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "require-from-string": "^2.0.2",
-    "ts-jest": "^29.0.0",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.0",
-    "vite-tsconfig-paths": "^3.5.0",
-    "webpack": "^5.74.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.0-alpha.41",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vite-tsconfig-paths": "^3.5.1"
   },
   "husky": {
     "hooks": {
@@ -69,6 +68,11 @@
     "*.{ts,tsx}": [
       "eslint --cache",
       "pretty-quick --staged"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
     ]
   }
 }
