--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,7 +20,6 @@
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
   },
-  "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
@@ -36,32 +35,34 @@
   ],
   "scripts": {
     "dev": "vite build --watch",
-    "build": "tsc && vite build && tsc-alias"
+    "build": "tsc && vite build && tsc-alias",
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "peerDependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@storybook/react": "^6.5.10",
     "@styled-system/variant": "^5.1.5",
-    "@types/node": "^18.7.23",
-    "@vitejs/plugin-react": "^2.1.0",
-    "polished": "^4.2.2",
     "styled-system": "^5.1.5",
-    "vite": "^3.1.0",
-    "vite-plugin-dts": "^1.5.0",
-    "vite-tsconfig-paths": "^3.5.0"
+    "vite": "^3.1.8",
+    "vite-plugin-dts": "^1.6.6",
+    "vite-tsconfig-paths": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
     "@emotion/babel-plugin": "^11.10.2",
-    "@testing-library/react": "^12.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@testing-library/user-event": "^14.4.3",
+    "@vitejs/plugin-react": "^2.1.0",
+    "@vitest/ui": "^0.24.3",
+    "jsdom": "^20.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tsc-alias": "^1.7.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4",
+    "vitest": "^0.24.3"
   }
 }
