--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "baseUrl": "src",
-    "types": ["node"]
+    "baseUrl": "src"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
