--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,31 +38,32 @@
     "build": "tsc && vite build && tsc-alias",
     "test": "vitest run",
     "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "prepare": "pnpm build"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@styled-system/variant": "^5.1.5",
     "styled-system": "^5.1.5",
-    "vite": "^3.1.8",
-    "vite-plugin-dts": "^1.6.6",
-    "vite-tsconfig-paths": "^3.5.1"
+    "vite": "^3.2.3",
+    "vite-plugin-dts": "^1.7.0",
+    "vite-tsconfig-paths": "^3.5.2"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.2",
+    "@emotion/babel-plugin": "^11.10.5",
     "@testing-library/user-event": "^14.4.3",
-    "@vitejs/plugin-react": "^2.1.0",
-    "@vitest/ui": "^0.24.3",
-    "jsdom": "^20.0.1",
+    "@vitejs/plugin-react": "^2.2.0",
+    "@vitest/ui": "^0.25.1",
+    "jsdom": "^20.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tsc-alias": "^1.7.0",
+    "tsc-alias": "^1.7.1",
     "typescript": "^4.8.4",
-    "vitest": "^0.24.3"
+    "vitest": "^0.25.1"
   }
 }
