--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -51,7 +51,8 @@
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "rc-tooltip": "^5.2.2",
-    "react-color": "^2.19.3"
+    "react-color": "^2.19.3",
+    "react-resize-aware": "^3.1.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.47"
