--- a/.github/workflows/v3x.yml
+++ b/.github/workflows/v3x.yml
@@ -5,22 +5,22 @@
 #  -H "Accept: application/vnd.github.everest-preview+json" \
 #  -H "Authorization: token <user-token>" \
 #  --request POST \
-#  --data "{\"event_type\": \"v3x\"}" \
+#  --data "{\"event_type\": \"master\"}" \
 #  https://api.github.com/repos/pentaho/hv-uikit-react/dispatches
 
 name: v3.x Nightly
 on:
   # disable v3.x cron since no daily changes come in
   #  schedule:
-  #    - cron: "0 3 * * *" # daily at 03:00
+  #    - cron: "0 5 * * *" # daily at 05:00
   repository_dispatch:
     types: [v3x]
   workflow_dispatch:
 
 # flow:
-# +------------------------------------+          +-------------------+
-# |Static-Checks (Licenses, Lint, Jest)|          |Build-Documentation|
-# +----------+-------------------------+          +---------+---------+
+# +------------------------------------+     +---------------------------------+
+# |Static-Checks (Licenses, Lint, Jest)|     |Build-Storybook (v2 and v3 store)|
+# +----------+-------------------------+     +--------------+------------------+
 #            |                                              |
 #            |                   +-----------+--------------+
 #            |                   |           |              |
@@ -45,8 +45,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: "v3.x"
 
       - uses: actions/setup-node@v2
         with:
@@ -58,6 +56,9 @@ jobs:
       - name: Bootstrap
         run: npm run bootstrap
 
+      - name: Build
+        run: npm run build
+
       - name: License Check
         run: npm run license-check
 
@@ -67,8 +68,8 @@ jobs:
       - name: Test
         run: npm run test
 
-  Build-Storybook:
-    name: Build Storybook
+  Build-Storybook-V2-Store:
+    name: Build Storybook (v2 store)
     runs-on: ubuntu-latest
 
     steps:
@@ -81,7 +82,39 @@ jobs:
 
       - name: Install
         run: |
+          npm config set @hv:registry ${RESOLVE_REGISTRY}
           npm ci
+
+      - name: Bootstrap
+        run: npm run bootstrap
+
+      - name: Build Storybook
+        run: V2_COMPAT_STORY_STORE=TRUE npm run build-documentation
+
+      - name: Archive Storybook
+        uses: actions/upload-artifact@v2
+        with:
+          name: storybook-v2
+          path: ${{ github.workspace }}/dist
+
+      - name: Clean Folders
+        if: always()
+        run: rm -rf ${{ github.workspace }}/dist
+
+  Build-Storybook-V3-Store:
+    name: Build Storybook (v3 store)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+
+      - name: Install
+        run: npm ci
 
       - name: Bootstrap
         run: npm run bootstrap
@@ -92,16 +125,16 @@ jobs:
       - name: Archive Storybook
         uses: actions/upload-artifact@v2
         with:
-          name: storybook
+          name: storybook-v3
           path: ${{ github.workspace }}/dist
 
       - name: Clean Folders
         if: always()
-        run: |
+        run: rm -rf ${{ github.workspace }}/dist
 
   A11Y-Tests:
     name: Accessibility Tests
-    needs: [Build-Storybook]
+    needs: [Build-Storybook-V3-Store]
     runs-on: ubuntu-latest
 
     services:
@@ -120,18 +153,23 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: "16" # npm 8.x needed for overrides
 
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: storybook
+          name: storybook-v3
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
         uses: docker://docker
         with:
           args: docker restart storybook
+
+      - name: Required Dependencies
+        run: |
+          sudo apt-get -y update 
+          sudo apt-get install -y libgconf-2-4 libatk1.0-0 libatk-bridge2.0-0 libgdk-pixbuf2.0-0 libgtk-3-0 libgbm-dev libnss3-dev libxss-dev
 
       - name: Install automation/pa11y
         run: |
@@ -149,7 +187,7 @@ jobs:
 
   Applitools:
     name: Applitools Storybook Visual Testing
-    needs: [Build-Storybook]
+    needs: [Build-Storybook-V2-Store]
     runs-on: ubuntu-latest
 
     services:
@@ -173,13 +211,18 @@ jobs:
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: storybook
+          name: storybook-v2
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
         uses: docker://docker
         with:
           args: docker restart storybook
+
+      - name: Required Dependencies
+        run: |
+          sudo apt-get -y update 
+          sudo apt-get install -y libgconf-2-4 libatk1.0-0 libatk-bridge2.0-0 libgdk-pixbuf2.0-0 libgtk-3-0 libgbm-dev libnss3-dev libxss-dev
 
       - name: Install automation/Applitools
         run: |
@@ -204,9 +247,60 @@ jobs:
         if: always()
         run: rm -rf ${{ github.workspace }}/dist
 
+  Playwright:
+    name: Playwright test
+    needs: [Build-Storybook-V3-Store]
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+
+    services:
+      storybook:
+        image: nginx
+        ports:
+          - 9001:80
+        volumes:
+          - ${{ github.workspace }}/dist:/usr/share/nginx/html
+        options: >-
+          --name storybook
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+
+      - name: Fetch Storybook
+        uses: actions/download-artifact@v2
+        with:
+          name: storybook-v2
+          path: ${{ github.workspace }}/dist
+
+      - name: Restart nginx
+        uses: docker://docker
+        with:
+          args: docker restart storybook
+
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: npm run test:e2e
+        env:
+          PLAYWRIGHT_TEST_BASE_URL: http://storybook
+
+      - uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
   Robot:
     name: Test Robot
-    needs: [Build-Storybook]
+    needs: [Build-Storybook-V3-Store]
     runs-on: ubuntu-latest
     timeout-minutes: 60
     strategy:
@@ -222,6 +316,7 @@ jobs:
         ROBOT_REPORTS_DIR: ./reports
         ROBOT_THREADS: 4
         ROBOT_OPTIONS: "--variable STORYBOOK_URL:http://storybook --variable BROWSER:${{ matrix.browser }} --exclude bug-${{ matrix.browser }} --exclude bug-${{ matrix.browser }}-webdriver --exclude issue --exclude issue-${{ matrix.browser }} --exclude bug-infrastructure --exclude bug-infrastructure-${{ matrix.browser }}"
+        GECKO_DRIVER_VERSION: v0.31.0
 
     services:
       storybook:
@@ -238,7 +333,7 @@ jobs:
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
         with:
-          name: storybook
+          name: storybook-v3
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
@@ -264,7 +359,7 @@ jobs:
 
   Notify-End-Internal:
     name: Notify End Internal
-    needs: [Static-Checks, A11Y-Tests, Applitools, Robot]
+    needs: [Static-Checks, A11Y-Tests, Applitools, Robot, Playwright]
     if: failure()
     runs-on: ubuntu-latest
 
