--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,29 +1,13 @@
 name: Pull Request
+run-name: v3.x Pull Request
 on:
   pull_request:
     branches:
-      - master
-
-# flow:
-# +------------------------------------+     +---------------------------------+
-# |Static-Checks (Licenses, Lint, Jest)|     |Build-Storybook (v2 and v3 store)|
-# +----------+-------------------------+     +--------------+------------------+
-#            |                                              |
-#            |                   +-----------+------------------------------------------------------------+
-#            |                   |           |              |                   |              |          |
-#            |             +-----v----+ +----v-----+ +------v-----------+ +-----v-----+ +------v----------+
-#            |             |A11Y-Tests| |Applitools| |  Robot (chrome)  | |Playwright | |Github-Deployment|
-#            |             +--------+-+ +--+-------+ +------+-----------+ +------+----+ +------+----------+
-#            |                      |      |                |                    |             |
-#            |                      |      |                |                    |             |
-#            |                      |      |                |                    |             |
-#            |                    +-v------v-+              |                    |             |
-#            +------------------->|Notify-End|<-------------+--------------------+-------------+
-#                                 +----------+
+      - v3.x
 
 env:
   DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
-  DOCUMENTATION_PUBLISH_BRANCH: master
+  DOCUMENTATION_PUBLISH_BRANCH: v3.x
   DOCUMENTATION_PUBLISH_FOLDER: uikit/pr-${{ github.event.number }}
   DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for PR ${{ github.event.number }} of ${{ github.repository }}"
   DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/pr-${{ github.event.number }}/
@@ -36,7 +20,7 @@ env:
 jobs:
   Static-Checks:
     name: Licenses, Lint, Jest
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -44,11 +28,10 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: 16
 
       - name: Install
-        run: |
-          npm ci
+        run: npm ci
 
       - name: Bootstrap
         run: npm run bootstrap
@@ -76,7 +59,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: 16
 
       - name: Install
         run: |
@@ -87,8 +70,7 @@ jobs:
         run: npm run bootstrap
 
       - name: Build Storybook
-        run: |
-          V2_COMPAT_STORY_STORE=TRUE npm run build-documentation
+        run: V2_COMPAT_STORY_STORE=TRUE npm run build-documentation
 
       - name: Archive Storybook
         uses: actions/upload-artifact@v2
@@ -98,8 +80,7 @@ jobs:
 
       - name: Clean Folders
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/dist
+        run: rm -rf ${{ github.workspace }}/dist
 
   Build-Storybook-V3-Store:
     name: Build Storybook (v3 store)
@@ -111,18 +92,16 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: 16
 
       - name: Install
-        run: |
-          npm ci
+        run: npm ci
 
       - name: Bootstrap
         run: npm run bootstrap
 
       - name: Build Storybook
-        run: |
-          npm run build-documentation
+        run: npm run build-documentation
 
       - name: Archive Storybook
         uses: actions/upload-artifact@v2
@@ -132,18 +111,17 @@ jobs:
 
       - name: Clean Folders
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/dist
+        run: rm -rf ${{ github.workspace }}/dist
 
   Applitools:
     name: Applitools Storybook Visual Testing
     if: github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'
     needs: [Build-Storybook-V2-Store]
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     services:
       storybook:
-        image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/nginx
+        image: nginx
         ports:
           - 9001:80
         volumes:
@@ -157,7 +135,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: 16
 
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
@@ -166,7 +144,7 @@ jobs:
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
-        uses: docker://dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/docker
+        uses: docker://docker
         with:
           args: docker restart storybook
 
@@ -192,8 +170,7 @@ jobs:
 
       - name: Clean Folders
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/dist
+        run: rm -rf ${{ github.workspace }}/dist
 
   Applitools-Complete:
     name: Applitools complete API call
@@ -234,8 +211,7 @@ jobs:
           fetch-depth: 1
 
       - name: Remove Previous Documentation
-        run: |
-          rm -rf ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}/*
+        run: rm -rf ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}/*
 
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
@@ -254,8 +230,7 @@ jobs:
 
       - name: Cleanup Folder
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/gh-docs
+        run: rm -rf ${{ github.workspace }}/gh-docs
 
       - name: Update Deployment Status
         uses: bobheadxi/deployments@v0.4.3
@@ -270,11 +245,11 @@ jobs:
   A11Y-Tests:
     name: Accessibility Tests
     needs: [Build-Storybook-V3-Store]
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     services:
       storybook:
-        image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/nginx
+        image: nginx
         ports:
           - 9001:80
         volumes:
@@ -288,7 +263,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: 16
 
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
@@ -297,7 +272,7 @@ jobs:
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
-        uses: docker://dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/docker
+        uses: docker://docker
         with:
           args: docker restart storybook
 
@@ -313,8 +288,7 @@ jobs:
 
       - name: Clean Folders
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/dist
+        run: rm -rf ${{ github.workspace }}/dist
 
   Playwright:
     name: Playwright test
@@ -338,7 +312,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: 16
 
       - name: Fetch Storybook
         uses: actions/download-artifact@v2
@@ -371,11 +345,11 @@ jobs:
   Robot:
     name: Test Robot
     needs: [Build-Storybook-V3-Store]
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     container:
-      image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/joaoeg/docker-robot-framework:0.1
-      options: --shm-size=6g --cpus 4 -u 2501
+      image: joaoeg/docker-robot-framework:0.1
+      options: --shm-size=6g -u 1001
       env:
         BROWSER: chrome
         ROBOT_TESTS_DIR: ./automation/robot/storybook
@@ -385,7 +359,7 @@ jobs:
 
     services:
       storybook:
-        image: dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/nginx
+        image: nginx
         volumes:
           - ${{ github.workspace }}/dist:/usr/share/nginx/html
         options: >-
@@ -401,7 +375,7 @@ jobs:
           path: ${{ github.workspace }}/dist
 
       - name: Restart nginx
-        uses: docker://dockerhub-docker-remote.repo.orl.eng.hitachivantara.com/docker
+        uses: docker://docker
         with:
           args: docker restart storybook
 
@@ -428,7 +402,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # delete storybook artifacts
       - uses: geekyeggo/delete-artifact@v1
         with:
           name: |
