--- a/.github/workflows/release-recover.yml
+++ b/.github/workflows/release-recover.yml
@@ -1,52 +1,30 @@
-# See https://octokit.github.io/rest.js/v17#repos-create-dispatch-event on how to trigger repository_dispatch events.
-#
-# A few optional parameters that can be passed to this workflow:
-#  - ref: specific branch to perform the release, defaults to 'master'.
-#  - registry: npm registry where to publish the packages, default is defined below by DEFAULT_PUBLISH_REGISTRY.
-#  - type: the release type wich is used to complete the script name to call npm with, 'publish-<type>'.
-#
-# An example using curl:
-# curl \
-#  -H "Accept: application/vnd.github.everest-preview+json" \
-#  -H "Authorization: token <user-token>" \
-#  --request POST \
-#  --data "{\"event_type\": \"release\", \"client_payload\": {\"ref\": \"alpha\", \"type\": \"prerelease\"}}" \
-#  https://api.github.com/repos/pentaho/hv-uikit-react/dispatches
-
-name: v2.x Release
+name: Recover Release
+run-name: v3.x Recover Release
 on:
-  repository_dispatch:
-    types: [v2-release]
   workflow_dispatch:
 
 env:
-  RESOLVE_REGISTRY: https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/npm/
-  DEFAULT_PUBLISH_REGISTRY: https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/uikit-npm-release-orl/
   DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
   DOCUMENTATION_PUBLISH_BRANCH: master
-  DOCUMENTATION_PUBLISH_FOLDER: uikit/v2.x
-  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for v2.x of ${{ github.repository }}"
-  DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/v2.x/
+  DOCUMENTATION_PUBLISH_FOLDER: uikit/v3.x
+  DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for v3.x of ${{ github.repository }}"
+  DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/v3.x/
 
 jobs:
   Release:
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
     env:
       NODE_ENV: production
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      PUBLISH_REGISTRY: ${{ github.event.client_payload.registry }}
-      CHECKOUT_REF: ${{ github.event.client_payload.ref }}
-      RELEASE_TYPE: ${{ github.event.client_payload.type }}
 
     steps:
       - uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: "16"
 
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: v2.x
           # Pulls all commits (needed for semantic release to correctly version)
           # See https://github.com/semantic-release/semantic-release/issues/1526
           fetch-depth: "0"
@@ -59,9 +37,7 @@ jobs:
         env:
           # ensure dev dependencies are installed
           NODE_ENV: development
-        run: |
-          npm config set @hv:registry ${RESOLVE_REGISTRY}
-          npm ci
+        run: npm ci
 
       - name: Bootstrap
         env:
@@ -71,19 +47,14 @@ jobs:
 
       - name: Publish Setup
         run: |
-          npm config delete @hv:registry
-          npm config set registry "${PUBLISH_REGISTRY:-DEFAULT_PUBLISH_REGISTRY}"
-
-          npm config set _auth ${{ secrets.NPM_PUBLISH_AUTH }}
-          npm config set email ${{ secrets.NPM_PUBLISH_EMAIL }}
-          npm config set always-auth true
-
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
       - name: Publish (Lerna)
-        run: npm run publish-${{ env.RELEASE_TYPE }} -- --no-git-reset --no-verify-access
-
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.HV_NPM_AUTOMATION_TOKEN}}
+        run: |
+          npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+          npx lerna publish from-package --no-git-reset --yes --no-verify-access
       - name: Get Releases Commit Message
         uses: actions/github-script@v3
         with:
@@ -92,18 +63,15 @@ jobs:
             const branch = await github.repos.getBranch({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              branch: "v2.x"
+              branch: "v3.x"
             })
-
             const commitMessage = branch.data.commit.commit.message
             const slackMessage = commitMessage.replace('chore(release): publish', '')
               .replace(/\n/g, "\\n")
               .replace(/\r/g, "\\r")
               .replace(/\t/g, "\\t")
               .replace(/\f/g, "\\f")
-
             core.exportVariable("SLACK_MESSAGE", slackMessage)
-
       - name: Start Documentation Deployment
         uses: bobheadxi/deployments@v0.4.3
         id: deployment
@@ -114,8 +82,7 @@ jobs:
           desc: ${{env.DOCUMENTATION_PUBLISH_FOLDER}}
 
       - name: Generate Documentation
-        run: |
-          EXCLUDE_TEST_STORIES=true npm run build-documentation
+        run: EXCLUDE_TEST_STORIES=true npm run build-documentation
 
       - name: Checkout Documentation Repository
         uses: actions/checkout@v2
@@ -127,14 +94,12 @@ jobs:
           fetch-depth: 1
 
       - name: Remove Previous Documentation
-        run: |
-          rm -rf ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}/*
+        run: rm -rf ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}/*
 
       - name: Copy New Documentation
         run: |
           mkdir -p ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}
           cp -r dist/* ${{ github.workspace }}/gh-docs/${DOCUMENTATION_PUBLISH_FOLDER}
-
       - name: Push Documentation
         run: |
           cd ${{ github.workspace }}/gh-docs
@@ -143,11 +108,9 @@ jobs:
           git add -A ${DOCUMENTATION_PUBLISH_FOLDER}
           git commit -m "${DOCUMENTATION_PUBLISH_MESSAGE}"
           git push
-
       - name: Cleanup Folder
         if: always()
-        run: |
-          rm -rf ${{ github.workspace }}/gh-docs
+        run: rm -rf ${{ github.workspace }}/gh-docs
 
       - name: Update Deployment Status
         uses: bobheadxi/deployments@v0.4.3
@@ -171,7 +134,7 @@ jobs:
               "attachments": [
                 {
                   "mrkdwn_in": ["text"],
-                  "author_name": "New UI-Kit artifacts are available for v2",
+                  "author_name": "New UI-Kit artifacts are available",
                   "title": "More details https://github.com/${{github.repository}}/releases",
                   "text": "${{env.SLACK_MESSAGE}}",
                   "footer": "${{env.DOCUMENTATION_URL}}"
